--- a/style.css
+++ b/style.css
@@ -80,11 +80,24 @@
         color:hsl(179, 100%, 13%);
     }
 
+
+
+/* tablets from 600px widths and up */
+
+
+
+
     @media( min-width: 600px){
         
     }
 
-
+    @media( min-width: 600px){
+        .par{
+            font-size: 20px;
+            margin:25px 0 0 110px;
+            width: 400px; 
+        }
+    }
 
 /* -------------------desk top ------------------------ */
 
