--- a/style.css
+++ b/style.css
@@ -87,9 +87,7 @@
 
 
 
-    @media( min-width: 600px){
-        
-    }
+    
 
     @media( min-width: 600px){
         .par{
@@ -97,6 +95,15 @@
             margin:25px 0 0 110px;
             width: 400px; 
         }
+    }
+
+/* tablets from 800px widths and up */
+    @media( min-width: 800px){
+        .par{
+            font-size: 20px;
+            margin:25px 0 0 120px;
+            width: 600px; 
+        } 
     }
 
 /* -------------------desk top ------------------------ */
