--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@
         height: 20px;
           margin:0px auto;
         font-size: 20px;
-        border-radius: 40px 40px 40px 40px;
+        border-radius: 40px;
         text-align: center;
     }
 
@@ -80,9 +80,7 @@
         color:hsl(179, 100%, 13%);
     }
 
-    @media( min-width: 600px){
-        
-    }
+   
 
 
 
