--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@
         font-family: 'Lexend Deca', sans-serif;
         color:hsla(0, 0%, 100%, 0.75);
         margin:0 auto;
-        width: 310px;
+       padding: 0 30px 0 30px;
         line-height: 2.5em;
     }
 
