--- a/style.css
+++ b/style.css
@@ -58,11 +58,9 @@
         top:35px;
         background:white;
        text-align: center;
-       padding: 15px 10px 15px 10px;
+       padding: 15px 0px ;
        text-transform: capitalize;
-        width:150px;
-        height: 20px;
-          margin:0px auto;
+        margin:0px 85px;
         font-size: 20px;
         border-radius: 40px;
         text-align: center;
@@ -128,10 +126,9 @@ justify-content: center;
      
 }
 .btn{    
-    padding: 8px 10px 8px 10px;
-     width:140px;
-     height: 30px;
-     margin:0px 0 0px 40px;  
+    padding: 8px 0px ;
+    
+     margin:0px 60px  
  }
 
   }
