--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@
         font-family: 'Lexend Deca', sans-serif;
         color:hsla(0, 0%, 100%, 0.75);
         margin:0 auto;
-       padding: 0 30px 0 30px;
+       padding: 0px 30px ;
         line-height: 2.5em;
     }
 
@@ -79,7 +79,16 @@
     }
 
    
+    @media( min-width: 800px){
+        .par{
+            font-size: 25px;
+           
+            margin:0 100px;
+           padding: 0px 0px ;
+            line-height: 2.5em;
+        }  
 
+    }
 
 
 /* -------------------desk top ------------------------ */
